Fix launch4j builder for java 9/10